[package]
name = "profqu_neat"
version = "0.1.0"
edition = "2021"
authors = ["ProfessorQu"]
description = "A library that implements the NEAT algorithm"
repository = "https://github.com/ProfessorQu/profqu_neat"
keywords = ["neural", "network", "genetic"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
once_cell = "1.17.0"

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "neat"
harness = false

[[bench]]
name = "genome"
harness = false